--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -8,6 +8,8 @@ disableKinds = [ "taxonomy", "taxonomyTerm"]
     firstName = "Eddie"
     lastName = "Webb"
     address = "Rollinsford, NH"
+
+    profileImage = "img/profile3.png"
     email = "email@domain.com"
     description = "Software Platform Engineer with experience leveraging agile, DevOps, and CI/CD to manage large scale distributed platforms both on prem and in public cloud."
     favicon = "images/favicon.ico"
