--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -9,7 +9,7 @@ theme = "resume"
     address = "Rollinsford, NH"
     phone = "1-555-555-1234"
     contactNote = "Dev Tools Engineer"
-    profileImage = "img/profile3.jpg"
+    profileImage = "img/TechChat.png"
     email = "email@domain.com"
     description = "Software Platform Engineer with experience leveraging agile, DevOps, and CI/CD to manage large scale distributed platforms both on prem and in public cloud."
     favicon = "images/favicon.ico"
