--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,24 @@ jobs:
           command: |
             hugo server -v -s exampleSite -b http://localhost --themesDir ../..
       - run:
-          name: Check Content  
+          name: Check Server  
           command: |
             sleep 5 #wait for last background step to complete
-            HTTPCODE=`curl -s -o /dev/null -w "%{http_code}" http://localhost:1313/index.html`
+            HTTPCODE=`curl -s -o /dev/null -w "%{http_code}" http://localhost:1313`
             if [ "$HTTPCODE" -ne 200 ];then
-              echo "index.html not found, failing"
+              echo "index not found, failing"
               exit 1
             fi
+      - run:
+          name: Check Content  
+          command: |
+            curl -s -o /tmp/index  http://localhost:1313
+            #just some keywords that confirm content was read into template..
+            grep 'Rochester' /tmp/index 
+            grep 'fab fa-stack-overflow' /tmp/index 
+            grep 'Eddie Webb' /tmp/index 
+            grep 'BOSH (Bosh Outer SHell)' /tmp/index 
+
+
+            
+
