--- a/buildkite.yml
+++ b/buildkite.yml
@@ -2,13 +2,11 @@ steps:
   - command: "ls"
     label: "ls"
 
-  - command: "hugo -v -s exampleSite --destination /tmp/public -b http://localhost --themesDir ../.."
-    label: "Hugo Build Test Site"
-    env:
-      SECRET: "BAZ"
+  - label: "Hugo Build Test Site"
     plugins:
       - docker#v2.1.0:
           image: "felicianotech/docker-hugo:0.47.1"
+          command: "hugo -v -s exampleSite --destination /tmp/public -b http://localhost --themesDir ../.."
 
   - command: "ls"
     label: "ls -la /tmp/public"
