fix issue with nav links not scrolling always
use hugo summary for blog

fix navlink scrolling

Fix indent of README.md

Update README.md

Fixed typos

fixes issue #29 and fixes #33 by adding markdown

update hugo versions

update hugo versions

update hugo versions

update hugo versions

Optional icon or link for Skills (#38)

* Updated the Skills template to be more flexible so that one can optionally specify an icon or link for a skill.

* Updated the sample skills to demonstrate new functionality of optionally specifying an icon or link for a skill.

Fix blog post responsive width issue (#36)

Adding a width to the child element of the blog post fix an issue with the page 'overflowing' from the parent container.

Corrected the FavIcon path. (#37)

replace deprecated .Hugo function with hugo. (#35)

Adds rel-me to social links (#34)

note contributors, add badge [skip ci]

Many thanks to  @awhitford @kaushalmodi @JulienRouse

more explicit about blog folder (#46)

cms:blog and settings

working out kinks in config paths

full config

Update Settings “general”

fix tests

support creations

Update Settings “general”

Update Projects “_index”

Update Projects “_index”

Update Publications “_index”

Update Contributions “_index”

Create Contributions “cvxc”

see if cms will render toml instead.

Update deploy-triggers.md

Delete cvxc.md

added contributions and publications, corrected sample content.

move CMS to exampleSite, not theme

Upload “/exampleSite/static/img/schema-org.png”

Update Contributions “schema-org”

Update Contributions “shields-docker”

update cnfig guide

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,13 +8,15 @@ workflows:
 jobs:
   test:
     docker:
-      - image: felicianotech/docker-hugo:0.47.1
-    working_directory: hugo-resume
+      - image: cibuilds/hugo:0.62
+    working_directory: /hugo-resume
     steps:
       - checkout
       - run:
           name: HUGO build for Test domain
           command: |
+            pwd
+            cd /hugo-resume
             hugo -v -s exampleSite --destination /tmp/public -b http://localhost --themesDir ../..
             ls /tmp/public
             if [ ! -f /tmp/public/index.html ];then
@@ -25,6 +27,7 @@ jobs:
           name: Start Local Server
           background: true
           command: |
+            pwd
             hugo server -v -s exampleSite -b http://localhost --themesDir ../..
       - run:
           name: Check Server  
@@ -41,7 +44,6 @@ jobs:
             curl -s -o /tmp/index  http://localhost:1313
             #just some keywords that confirm content was read into template..
             grep 'Rochester' /tmp/index 
-            grep 'fab fa-stack-overflow' /tmp/index 
             grep 'Eddie Webb' /tmp/index 
             grep 'BOSH (Bosh Outer SHell)' /tmp/index 
 
