--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ workflows:
 jobs:
   test:
     docker:
-      - image: felicianotech/docker-hugo:0.47.1
+      - image: cibuilds/hugo:0.62
     working_directory: hugo-resume
     steps:
       - checkout
