--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: HUGO build for Test domain
           command: |
-            hugo -v -s exampleSite --destination /tmp/public -b http://localhost --themesDir ../..
+            hugo -v -s exampleSite --destination /tmp/public -b http://localhost --themesDir ../.. -t project
             ls /tmp/public
             if [ ! -f /tmp/public/index.html ];then
               echo "index.html not created, failing"
@@ -24,7 +24,7 @@ jobs:
           name: Start Local Server
           background: true
           command: |
-            hugo server -v -s exampleSite -b http://localhost --themesDir ../..
+            hugo server -v -s exampleSite -b http://localhost --themesDir ../.. -t project
       - run:
           name: Check Server  
           command: |
