--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,3 +1,12 @@
+#
+#. This config file adds support for Netlify CMS, exposed at /admin on the running site.
+# In order to use this on your site,
+#. 1) replace instances of "exampleSite/......" with the appropriate paths
+#. 2) replace repo path in `backend` settings 
+#
+
+
+
 backend:
   name: github
   repo: eddiewebb/hugo-resume
@@ -18,6 +27,23 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
        
+  - name: "Projects" # Used in routes, ie.: /admin/collections/:slug/edit
+    label: "Projects" # Used in the UI, ie.: "New Post"
+    folder: "exampleSite/content/projects/creations" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    fields: # The fields each document in this collection have
+      - {label: "Title", name: "title", widget: "string"}     
+      - {label: "Publish Date", name: "date", widget: "datetime"} 
+      - {label: "featured", name: "featured", widget: "boolean", required: false}
+      - {label: "link to project repo or site", name: "link", widget: "string"}
+      - {label: "Project Image", name: image, widget: 'image' }
+      - {label: "Brief description", name: "description", widget: "string"}
+      - {label: "Tags", name: "tags", widget: "list", required: false}
+      - {label: "Fun Fact or Stat", name: "fact", widget: "string", default: "used by 20% of Fortune 500 companies!", required: false}
+      - {label: "weight (lower get more visibility)", name: "weight", widget: "number", valueType: float, step: 10, min: 0, max: 1000}
+      - {label: "Sitemap", name: "sitemap", widget: "object", field: {label: weight, name: weight, widget: "number", valueType: float, step: 0.1, min: 0.0, max: 1.0}}
+      - {label: "Body", name: "body", widget: "markdown"}
+       
   - name: 'settings'
     label: 'Settings'
     delete: false # Prevent users from deleting documents in this collection
@@ -34,6 +60,9 @@ collections: # A list of collections the CMS should be able to edit
           - { label: 'Site Url', name: 'baseURL', widget: 'string' }
           - { label: 'Theme', name: 'theme', widget: 'hidden', default: "hugo-resume" }
           - { label: 'Language Code', name: 'languageCode', widget: 'hidden', default: "en-us" }
+          - { label: 'PygmentCodeFences', name: 'PygmentsCodeFences', widget: 'boolean', required: false }
+          - { label: 'PygmentCodeFencesGuessSyntax', name: 'PygmentsCodeFencesGuessSyntax', widget: 'boolean', required: false }
+          - { label: 'PygmentCodeFencesGuessSyntax', name: 'PygmentsStyle', widget: 'string' }
           - label: 'Params'
             name: 'params'
             widget: 'object'
@@ -66,9 +95,6 @@ collections: # A list of collections the CMS should be able to edit
                   - { label: 'analytics', name: 'analytics', widget: 'object',fields: [{ label: 'Tracker ID', name: 'trackerID', widget: 'string' }]  }
               
           - { label: 'Show Git Commit INfo', name: 'enableGitInfo', widget: 'boolean', required: false }
-          - { label: 'PygmentCodeFences', name: 'PygmentsCodeFences', widget: 'boolean', required: false }
-          - { label: 'PygmentCodeFencesGuessSyntax', name: 'PygmentsCodeFencesGuessSyntax', widget: 'boolean', required: false }
-          - { label: 'PygmentCodeFencesGuessSyntax', name: 'PygmentsStyle', widget: 'string' }
           - { label: 'outputs', name: 'outputs', widget: 'object', field:{name: 'home', label: 'home' , widget: list, default: ['HTML','JSON'] }}
           - { label: 'taxonomies', name: 'taxonomies', widget: 'hidden', default:{name: 'home', label: 'home' , widget: string, default: ['tags'] }}
           
