--- a/theme.toml
+++ b/theme.toml
@@ -4,11 +4,11 @@
 name = "Resume"
 license = "MIT"
 licenselink = "https://github.com/eddiewebb/hugo-resume/blob/master/LICENSE.md"
-description = "Personal resume with social handles, skills inventory, work history and portfolio. Ported from StartBootstrap 'Resume' theme"
+description = "Personal resume with social handles, skills inventory, work history and portfolio. Includes native CMS editor experience with Netlify CMS. Ported from StartBootstrap 'Resume' theme"
 homepage = "https://edwardwebb.com/"
-tags = ["portfolio","resume","responsive"]
-features = ["social","mobile","projects","responsive","qr-code"]
-min_version = "0.1"
+tags = ["portfolio","resume","responsive", "cms"]
+features = ["social","mobile","projects","responsive","qr-code","cms"]
+min_version = "0.62"
 
 [author]
   name = "Eddie Webb"
